Fix package.json bin path as suggested by npm pkg fix

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "CLI tool to scaffold a Stacks dapp with Vite + React + Tailwind CSS",
   "type": "module",
   "bin": {
-    "create-stx-dapp": "./dist/index.js"
+    "create-stx-dapp": "dist/index.js"
   },
   "files": [
     "dist"
